--- a/main.css
+++ b/main.css
@@ -93,7 +93,7 @@ html {
 }
 
 .animated {
-    background: url(Charred.jpg);
+    background: url(Embers.jpg!sw800);
     background-size: 100% 100%;
     background-position: left top;
     margin-bottom: 30px;
@@ -158,7 +158,7 @@ h1 {
 
 h2 {
     font-size: 35px;
-    font-family: 'Quintessential', serif;
+    font-family: 'Federant', serif;
     font-weight: bolder;
     color: #FF2700;
     text-align: center;
@@ -335,8 +335,8 @@ nav p {
 }
 
 .logo {
-    width: 90px;
-    margin: 12px 0 12px 40px;
+    width: 110px;
+    margin: -5px 0 12px 40px;
     -webkit-transition: width 2s, height 2s, -webkit-transform 1.5s;
     /* Safari */
     transition: width 2s, height 2s, transform 1.5s;
@@ -389,13 +389,13 @@ img {
 
 #intro {
     max-width: 1050px;
-    height: 600px;
+    height: 650px;
     margin: auto;
 }
 
 #intro img {
     width: 1050px;
-    height: 530px;
+    height: 580px;
     margin: auto;
     position: absolute;
 }
@@ -406,12 +406,11 @@ img {
     color: #700;
 }
 
-#mobilemenu {
-    max-width: 75%;
-    margin: 20px auto;
-}
 
-#mobilemenu img {
+
+#menu {
+    max-width: 85%;
+    margin: 20px auto;
     display: flex;
     max-width: 100%;
     margin: auto;
@@ -555,8 +554,13 @@ img {
         border-bottom-right-radius: 20px;
     }
     
-    .menus {
-        margin: 5px;
+    .menu {
+        width: 85%;
+        margin: auto;
+    }
+    
+    #menu{
+        border-radius: 20px;
     }
     
     #reservation {
@@ -646,13 +650,13 @@ img {
     input[type=submit] {
         color: #ffeecc;
         padding: 10px 39px;
-        background: repeating-linear-gradient(to top, #33331a, #808000, #bfbf5a 100%);
+        background: repeating-linear-gradient(to top, #FF2700, #f00, #ff0, #FF2700 100%);
         width: 150px;
         border-radius: 30px;
         font-family: 'Federant';
         font-size: 20px;
-        text-decoration: none;
-        border: .5px solid #550;
+        text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+        border: .5px solid #ff0;
         box-shadow: 2px 8px 10px black, -2px 8px 10px black;
         -webkit-transition: background-color 1s ease-out;
         -moz-transition: background-color 1s ease-out;
@@ -662,10 +666,11 @@ img {
     }
     /* When moving the mouse over the submit button, add a blue color */
     input[type=submit]:hover {
-        box-shadow: 2px 8px 10px #220;
+        box-shadow: 2px 8px 30px #FF0;
         color: antiquewhite;
-        text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+        text-shadow: 1px 1px 0 #800, -1px -1px 0 #800, 1px -1px 0 #800, -1px 1px 0 #800, 1px 1px 0 #800;
         cursor: pointer;
+        background: repeating-linear-gradient(to top, #FF2700, #f00, #ff0 100%);
     }
     
     #fname {
@@ -682,13 +687,19 @@ img {
     
     #form {
         text-align: center;
-        width: 80%;
+        background: url(Charred.jpg);
+        background-size: 100% 100%;
+        border: 8px double #FF2700;
+        border-radius: 20px;
+        width: 85%;
+        margin: 30px auto;
     }
     
     #form h2{
         margin-bottom: -50px;
-        color: #770;
-        text-shadow: 0px 2px 0px #000;
+        color: #FF2700;
+        text-align: center;
+        text-shadow: -1px -1px 0 #040, 1px 1px 0 #ff0;
     }
     
     footer {
@@ -761,7 +772,7 @@ img {
     }
     
     .animated {
-        background: url(Charred.jpg);
+        background: url(Embers.jpg!sw800);
         background-size: cover;
         background-position: center top;
     }
@@ -893,11 +904,17 @@ img {
     }
     h2 {
         font-size: 24px;
+        color: #FF2700;
+        text-align: center;
+        text-shadow: -1px -1px 0 #040, 1px 1px 0 #ff0;
     }
-    #mobilemenu h2 {
-        font-size: 28px;
-        margin: 5px auto 15px;
+    #menu {
+        width: 95%;
+        margin: 10px auto 15px;
+        border-radius: 20px;
     }
+    
+    
     h3 {
         font-size: 20px;
         width: 150px;
@@ -948,16 +965,24 @@ img {
         margin: 0px;
     }
     
-    #form{
-        margin-top: 25px;
+    #form {
+        text-align: center;
+        background: url(Charred.jpg);
+        background-size: 100% 100%;
+        border: 8px double #FF2700;
+        border-radius: 20px;
         width: 85%;
+        margin: 30px auto;
     }
+    
     #form h2 {
         font-size: 30px;
         margin-top: 30px;
-        color: #770;
-        text-shadow: 0px 2px 0px #000;
+        color: #FF2700;
+        text-align: center;
+        text-shadow: -1px -1px 0 #040, 1px 1px 0 #ff0;
     }
+    
     select {
         padding: 0px;
         font-family: 'federant', serif;
@@ -1000,12 +1025,12 @@ img {
         font-family: 'federant';
         font-size: 18px;
         color: #b00;
-        box-shadow: 2px 4px 10px #111109;
+        box-shadow: 2px 4px 10px #FF2700;
         text-align: center;
         width: 80%;
         padding: 5px;
         /* Some padding */
-        border: 1.5px solid #999966;
+        border: .5px solid red;
         /* Gray border */
         border-radius: 15px;
         /* Rounded borders */
@@ -1021,27 +1046,28 @@ img {
     /* Style the submit button with a specific background color etc */
     input[type=submit] {
         color: #ffeecc;
-        margin: 20px 0;
-        padding: 5px;
-        background: repeating-linear-gradient(to top, #33331a, #808000, #bfbf5a 100%);
-        width: 120px;
+        padding: 5px 10px;
+        background: repeating-linear-gradient(to top, #FF2700, #f00, #ff0, #FF2700 100%);
+        width: 125px;
         border-radius: 30px;
         font-family: 'Federant';
-        font-size: 20px;
-        text-decoration: none;
-        border: .5px solid #aa0;
+        font-size: 17px;
+        text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+        border: .5px solid #ff0;
         box-shadow: 2px 8px 10px black, -2px 8px 10px black;
         -webkit-transition: background-color 1s ease-out;
         -moz-transition: background-color 1s ease-out;
         -o-transition: background-color 1s ease-out;
         transition: background-color 1s ease-out;
+        margin: 20px auto;
     }
     /* When moving the mouse over the submit button, add a blue color */
     input[type=submit]:hover {
-        box-shadow: 2px 8px 10px #220;
+        box-shadow: 2px 8px 30px #FF0;
         color: antiquewhite;
-        text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+        text-shadow: 1px 1px 0 #800, -1px -1px 0 #800, 1px -1px 0 #800, -1px 1px 0 #800, 1px 1px 0 #800;
         cursor: pointer;
+        background: repeating-linear-gradient(to top, #FF2700, #f00, #ff0 100%);
     }
     /* Add a background color and some padding around the form */
     .container {
@@ -1143,18 +1169,20 @@ img {
 
     
     .desktop a{
+        font-family: 'Quintessential';
+        font-weight: bolder;
+        font-size: 24px;
         text-transform: uppercase;
         transition: 1s;
         margin: 20px;
         text-decoration: none;
-        padding: 8px 30px;
-        border: 1px solid #c99300;
-        border-radius: 10px; 
-        color: #FF2700;
+        padding: 4px 25px;
+        border: 1px solid #FF7000;
+        border-radius: 25px; 
+        color: #fff;
         transition: 1s;
-        border: 1px solid #FF2700;
-        text-shadow: 1px 1px 0px #fff, -1px -1px 0px black, -1px 1px 0px black, 1px -1px 0px black;
-        background: repeating-linear-gradient(to top, #FF2700, #ff0, #f00 100%);
+        text-shadow:  -1px 1px 0px #000, 1px -1px 0px #000;
+        background: repeating-linear-gradient(to top, #f00, #F00, #FF7000, #ff0 100%);
     }
 
     .desktop a:hover{
@@ -1226,9 +1254,11 @@ img {
         margin-top: 30px;
     }
     h1 {
+        font-family: 'Redressed';
         font-size: 38px;
         border: 10px double #FF2700;
     }
+    
     p {
         font-size: 22px;
         width: 375px;
@@ -1298,12 +1328,12 @@ img {
         background-color: #f5f5f0;
         margin: auto;
         text-align: center;
-        box-shadow: 2px 4px 10px #111109;
+        box-shadow: 2px 4px 10px #FF2700;
         width: 90%;
         /* Full width */
         padding: 8px;
         /* Some padding */
-        border: .5px solid #999966;
+        border: .5px solid #F00;
         /* Gray border */
         border-radius: 17px;
         /* Rounded borders */
@@ -1319,28 +1349,28 @@ img {
     /* Style the submit button with a specific background color etc */
     input[type=submit] {
         color: #ffeecc;
-        letter-spacing: .3px;
-        margin: 40px 0 75px;
         padding: 10px 39px;
-        background: repeating-linear-gradient(to top, #33331a, #808000, #bfbf5a 100%);
+        background: repeating-linear-gradient(to top, #FF2700, #f00, #ff0, #FF2700 100%);
         width: 150px;
         border-radius: 30px;
         font-family: 'Federant';
         font-size: 20px;
-        text-decoration: none;
-        border: .5px solid #550;
+        text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+        border: .5px solid #ff0;
         box-shadow: 2px 8px 10px black, -2px 8px 10px black;
         -webkit-transition: background-color 1s ease-out;
         -moz-transition: background-color 1s ease-out;
         -o-transition: background-color 1s ease-out;
         transition: background-color 1s ease-out;
+        margin-bottom: 50px;
     }
     /* When moving the mouse over the submit button, add a blue color */
     input[type=submit]:hover {
-        box-shadow: 2px 8px 10px #220;
+        box-shadow: 2px 8px 30px #FF0;
         color: antiquewhite;
-        text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        text-shadow: 1px 1px 0 #800, -1px -1px 0 #800, 1px -1px 0 #800, -1px 1px 0 #800, 1px 1px 0 #800;
         cursor: pointer;
+        background: repeating-linear-gradient(to top, #FF2700, #f00, #ff0 100%);
     }
     #fname {
         margin-top: 100px;
@@ -1356,12 +1386,27 @@ img {
     }
     #form {
         text-align: center;
+        background: url(Charred.jpg);
+        background-size: 100% 100%;
+        border: 8px double #FF2700;
+        border-radius: 20px;
     }
     
     #form h2{
         margin-bottom: -50px;
-        color: #770;
-        text-shadow: 0px 2px 0px #000;
+        color: #FF2700;
+        text-align: center;
+        text-shadow: -1px -1px 0 #040, 1px 1px 0 #ff0;
+    }
+    
+    .menu{
+        width: 85%;
+        margin: auto;
+    }
+    
+    #menu{
+        width: 100%;
+        border-radius: 20px;
     }
     
     footer {
