--- a/main.css
+++ b/main.css
@@ -1385,6 +1385,7 @@ img {
         margin: auto;
     }
     #form {
+        width: 70%;
         text-align: center;
         background: url(Charred.jpg);
         background-size: 100% 100%;
