--- a/main.css
+++ b/main.css
@@ -83,9 +83,9 @@ html {
     margin: 50px auto;
     padding: 50px;
     border-radius: 15px;
-    background: url(SlideBackground.jpeg);
+    background: url(EllaSlideBW.jpeg);
     background-size: 100% 120%;
-    border: #807e31 double 5px;
+    border: #FF2700 double 5px;
     max-width: 100%;
     max-height: calc(100vh - 6rem);
     overflow-y: auto;
@@ -229,7 +229,7 @@ p {
     width: 616px;
     height: 318px;
     margin: 50px auto;
-    border: 8px double #FF2700;
+    border: 8px double gray;
     border-radius: 10px;
 }
 
@@ -250,7 +250,7 @@ p {
     z-index: 1;
     top: 0;
     right: 0;
-    background: url(SlideBackground.jpeg);
+    background: url(EllaSlideBW.jpeg);
     background-repeat: repeat;
     background-size: 100% 100%;
     overflow-x: hidden;
@@ -516,17 +516,16 @@ img {
     }
     
     #intro {
-        margin: auto;
+        margin: 50px auto;
         height: 450px;
         max-width: 700px;
     }
     
     h1 {
         font-size: 25px;
-        margin: 10px auto;
         max-width: 100%;
-        padding: 0;
-        border: 8px double #FF2700;
+        padding: 0 0 2px 0;
+        border: 6px double gray;
     }
     
     h4 {
@@ -549,7 +548,7 @@ img {
         margin: 44px auto;
         max-width: 700px;
         max-height: 350px;
-        border: 8px double #FF2700;
+        border: 6px double gray;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
     }
@@ -594,7 +593,7 @@ img {
     
     select {
         font-family: 'federant', serif;
-        color: #a00;
+        color: #f00;
         text-align: center;
         font-size: 18px;
         font-weight: bolder;
@@ -627,13 +626,13 @@ img {
     textarea {
         background-color: #f5f5f0;
         margin: auto;
-        box-shadow: 2px 4px 10px #111109;
+        box-shadow: 2px 4px 10px #ff2700;
         text-align: center;
         width: 65%;
         /* Full width */
         padding: 8px;
         /* Some padding */
-        border: .5px solid #999966;
+        border: 1px solid #ff2700;
         /* Gray border */
         border-radius: 17px;
         /* Rounded borders */
@@ -689,7 +688,7 @@ img {
         text-align: center;
         background: url(Charred.jpg);
         background-size: 100% 100%;
-        border: 8px double #FF2700;
+        border: 1px solid gray;
         border-radius: 20px;
         width: 85%;
         margin: 30px auto;
@@ -849,7 +848,7 @@ img {
         width: 286px;
         height: 148px;
         margin: 50px auto;
-        border: 4px double #FF2700;
+        border: 4px double gray;
         border-radius: 12px;
     }
     iframe {
@@ -872,7 +871,7 @@ img {
         margin: 25px auto 0px;
         border-top-right-radius: 17px;
         border-top-left-radius: 17px;
-        border: 3px double #FF2700;
+        border: 3px double gray;
     }
     #intro img {
         margin: 25px auto 0;
@@ -880,7 +879,7 @@ img {
         height: 180px;
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
-        border: 3px double #FF2700;
+        border: 3px double gray;
     }
     #logo {
         font-size: 12px;
@@ -906,7 +905,7 @@ img {
         font-size: 24px;
         color: #FF2700;
         text-align: center;
-        text-shadow: -1px -1px 0 #040, 1px 1px 0 #ff0;
+        text-shadow: -1px -1px 0 #040, 1px 1px 0 #fff;
     }
     #menu {
         width: 95%;
@@ -969,7 +968,7 @@ img {
         text-align: center;
         background: url(Charred.jpg);
         background-size: 100% 100%;
-        border: 8px double #FF2700;
+        border: 1px solid gray;
         border-radius: 20px;
         width: 85%;
         margin: 30px auto;
@@ -1126,7 +1125,7 @@ img {
         margin: 18px 0;
     }
     h1 {
-        border: 10px double #FF2700;
+        border: 10px double gray;
         font-size: 40px;
     }
     #stage img {
@@ -1140,7 +1139,7 @@ img {
     }
     #intro img {
         margin: 50px auto;
-        border: 8px double #FF2700;
+        border: 8px double gray;
         height: 500px;
     }
     .close {
@@ -1212,7 +1211,7 @@ img {
         margin: 56px auto;
         border-bottom-left-radius: 25px;
         border-bottom-right-radius: 25px;
-        border: 10px double #FF2700;
+        border: 10px double gray;
     }
     
     #info {
@@ -1256,7 +1255,7 @@ img {
     h1 {
         font-family: 'Redressed';
         font-size: 38px;
-        border: 10px double #FF2700;
+        border: 10px double gray;
     }
     
     p {
@@ -1389,8 +1388,9 @@ img {
         text-align: center;
         background: url(Charred.jpg);
         background-size: 100% 100%;
-        border: 8px double #FF2700;
+        border: 1px solid gray;
         border-radius: 20px;
+        margin: auto;
     }
     
     #form h2{
