--- a/main.css
+++ b/main.css
@@ -440,8 +440,8 @@ img {
     color: #FF2700;
     padding-top: 25%;
     font-family: 'federant' ;
-    background: #001600 url(Preloader1.gif) no-repeat center center;
-    background-size: 20%;
+    background: #BBBBFF url(PiesDance.gif) no-repeat center center;
+    background-size: 30%;
     height: 100%;
     width: 100%;
     position: fixed;
