--- a/main.css
+++ b/main.css
@@ -440,7 +440,7 @@ img {
     color: #FF2700;
     padding-top: 25%;
     font-family: 'federant' ;
-    background: #B8B8FE url(PiesDance.gif) no-repeat center center;
+    background: #A0A4F5 url(PiesDance.gif) no-repeat center center;
     background-size: 30%;
     height: 100%;
     width: 100%;
