--- a/main.css
+++ b/main.css
@@ -93,7 +93,7 @@ html {
 }
 
 .animated {
-    background: url(EmbersGif.gif);
+    background: url(Charred.jpg);
     background-size: 100% 100%;
     background-position: left top;
     margin-bottom: 30px;
