--- a/main.css
+++ b/main.css
@@ -341,6 +341,7 @@ nav p {
     -webkit-transition: width 2s, height 2s, -webkit-transform 1.5s;
     /* Safari */
     transition: width 2s, height 2s, transform 1.5s;
+    position: fixed;
 }
 
 .logo:hover {
@@ -476,8 +477,9 @@ img {
     }
     
     .logo {
-        margin: 12px 0 0 12px;
+        left: 10px;
         max-width: 75px;
+        position: fixed;
     }
     
     #togo {
@@ -702,6 +704,7 @@ img {
     .logo {
         width: 75px;
         margin: 10px 0 0 20px;
+        position: fixed;
     }
     
     nav {
@@ -762,7 +765,7 @@ img {
     
     .logo {
         max-width: 70px;
-        margin: 0;
+        left: -20px;
     }
     
     nav {
@@ -1367,6 +1370,10 @@ img {
 /*=======================================*/
 
 @media (max-width: 1200px) and (min-width: 1000px) {
+    
+    .logo{
+        position: fixed;
+    }
     
     .desktop a{
         margin: 20px 25px;
