--- a/main.css
+++ b/main.css
@@ -127,7 +127,7 @@ html {
 }
 
 h4:hover {
-    box-shadow: 2px 8px 10px #Ff0;
+    box-shadow: 2px 4px 5px #888;
     color: #fff;
     text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     text-decoration: none;
@@ -346,7 +346,7 @@ nav p {
 }
 
 .navicon:hover {
-    filter: drop-shadow(2px 2px 4px #ff0);
+    filter: drop-shadow(2px 2px 2px #aaa);
 }
 
 .logo {
@@ -545,10 +545,12 @@ img {
     
     h1 {
         font-family: 'Redressed';
-        font-size: 25px;
+        font-size: 30px;
         max-width: 100%;
-        padding: 0 0 2px 0;
+        padding: 30px 0 2px 0;
         margin-top: -50px;
+        height: 100px;
+        
     }
     
     h4 {
@@ -678,7 +680,7 @@ img {
     }
     /* When moving the mouse over the submit button, add a blue color */
     input[type=submit]:hover {
-        box-shadow: 2px 8px 30px #FF0;
+        box-shadow: 2px 8px 10px #555;
         color: antiquewhite;
         text-shadow: 1px 1px 0 #800, -1px -1px 0 #800, 1px -1px 0 #800, -1px 1px 0 #800, 1px 1px 0 #800;
         cursor: pointer;
@@ -1053,7 +1055,7 @@ img {
     }
     /* When moving the mouse over the submit button, add a blue color */
     input[type=submit]:hover {
-        box-shadow: 2px 8px 30px #FF0;
+        box-shadow: 2px 8px 10px #555;
         color: antiquewhite;
         text-shadow: 1px 1px 0 #800, -1px -1px 0 #800, 1px -1px 0 #800, -1px 1px 0 #800, 1px 1px 0 #800;
         cursor: pointer;
@@ -1337,7 +1339,7 @@ img {
     }
     /* When moving the mouse over the submit button, add a blue color */
     input[type=submit]:hover {
-        box-shadow: 2px 8px 30px #FF0;
+        box-shadow: 2px 8px 10px #555;
         color: antiquewhite;
         text-shadow: 1px 1px 0 #800, -1px -1px 0 #800, 1px -1px 0 #800, -1px 1px 0 #800, 1px 1px 0 #800;
         cursor: pointer;
@@ -1372,6 +1374,19 @@ img {
     #menu{
         width: 100%;
         border-radius: 20px;
+    }
+    
+    .forno{
+        display: flex;
+        width: 50%;
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .forno img{
+        width: 55%;
+        margin-top: 25px;
     }
     
     footer {
