--- a/main.css
+++ b/main.css
@@ -758,6 +758,19 @@ img {
     #menumade{
         width: 55px;
     }
+    
+    .forno{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 0;
+    }
+    
+    .forno img{
+        width: 35%;
+        margin-top: 25px;
+        margin-bottom: -40px;
+    }
 }
 
 
@@ -1071,6 +1084,18 @@ img {
         text-align: center;
         margin-bottom: 20px;
     }
+    
+    .forno{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .forno img{
+        width: 25%;
+        margin-top: 25px;
+    }
+    
     footer {
         float: left;
         width: 100%;
@@ -1387,6 +1412,7 @@ img {
     .forno img{
         width: 55%;
         margin-top: 25px;
+        margin-bottom: -80px;
     }
     
     footer {
@@ -1456,6 +1482,11 @@ img {
     }
     .close {
         right: 240px;
+    }
+    
+    .forno img{
+        width: 60%;
+        margin-top: 25px;
     }
 }
 
