--- a/main.css
+++ b/main.css
@@ -1142,13 +1142,16 @@ img {
         display: none;
     }
     
+    nav::before{
+        height: 175px;
+    }
+    
     .desktop{
         display: flex;
         width: 100%;
-        height: 150px;
         background: url(BurntPlank.png) no-repeat;
         filter: drop-shadow(2px 2px 5px #ff2700);
-        margin: 0px 550px 50px;
+        margin: -16px 550px 50px;
         position: fixed;
         z-index: 999999;
     }
@@ -1209,6 +1212,7 @@ img {
         position: fixed;
         left: 0;
         z-index: 9999999;
+        margin-top: -5px;
     }
     
     #stage {
@@ -1439,8 +1443,13 @@ img {
 
 @media (max-width: 1200px) and (min-width: 1000px) {
     
+    nav::before{
+        height: 165px;
+    }
+    
     .logo{
         position: fixed;
+        margin-top: -12px;
     }
     
     .desktop a{
@@ -1450,7 +1459,7 @@ img {
     }
     
     .desktop{
-        margin: 0 450px;
+        margin: -20px 450px;
     }
     
     .desknav{
